# Ked

./: .gitignore  ReadMe.md  ReadMe_PyPI.md  pyproject.toml
.github/workflows/: check_commit.yml  publish_release.yml
docs/: ReadMe.md
ked/: about.py  bindings.py  cli.py  config.py  defaults.yaml  dialogs.py  editor.py  help.py  settings.py  settings.yaml  statusbar.py  styles.tcss  tui.py  tui.tcss  widgets.py
tests/: ReadMe.md  test_bindings.py  test_config.py
tests/files/: encoding_utf8.txt  encoding_utf8bom.txt  long_lines.txt  newline_crlf.txt  newline_lf.txt  newline_mixed.txt  trailing_whitespace.txt  unicode_characters.txt
